--- a/cowin/resources/core-config.yaml
+++ b/cowin/resources/core-config.yaml
@@ -1,6 +1,7 @@
-dbname: castdb
-dbpass: Big@data10
-dbhost: localhost
-dbport: 5432
-dbuser: jacrod2901
+db-config:
+  dbname: castdb
+  dbpass: Big@data10
+  dbhost: localhost
+  dbport: 5432
+  dbuser: jacrod2901
 component-root: cast.components
