--- a/cowin/resources/checkvaxavailability.yaml
+++ b/cowin/resources/checkvaxavailability.yaml
@@ -2,3 +2,6 @@ user-table-name: cast_userrequests_tbl
 component-name: checkvaxavailability.checkvaxavailability
 output-csv-path: /home/jacrod2901/geese/cowin/resources/output.csv
 processed-apidata-table-name: cast_processedapidata_tbl
+email-from: dev@orcasol.net
+email-subject: ORCA - VaxAlert!!
+email-content: THis is an automated reply from ORCA. 
